# tvirt

./: .gitignore  CMakeLists.txt  TODO.org  main.cpp
comm/: CMakeLists.txt  Client.cpp  Client.hpp  ClientZmq.cpp  ClientZmq.hpp  Comm.hpp  Server.cpp  Server.hpp  ServerZmq.cpp  ServerZmq.hpp  Zmq.cpp  Zmq.hpp
daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  MonitoringStateListener.hpp  main.cpp
daemon/libvirt/: Virt.cpp  Virt.hpp  Vm.hpp
master/: CMakeLists.txt  main.cpp
master/src/: CMakeLists.txt  Master.cpp  Master.hpp  Requester.cpp  Requester.hpp  ViewControler.cpp  ViewControler.hpp
master/src/stdout/: CMakeLists.txt  Print.cpp  Print.hpp  main.cpp
master/src/web/: CMakeLists.txt  Hypervisor.cpp  Hypervisor.hpp  HypervisorConnect.cpp  HypervisorConnect.hpp  Hypervisors.cpp  Hypervisors.hpp  Vms.cpp  Vms.hpp  main.cpp  vm.hpp  vms.cpp  vms.hpp
proto/: CMakeLists.txt  Hypervisor.proto  Request.proto
utils/: Any.hpp  Return.hpp
